[minor] fix typo

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"app_name": "ERPNext",
-	"app_verion": "3.0.0",
+	"app_version": "3.0.0",
 	"requires_framework_version": "==3.0.0",
 	"base_template": "app/portal/templates/base.html",
 	"modules": {
